--- a/src/screens/Docks/Docks.css
+++ b/src/screens/Docks/Docks.css
@@ -1,14 +1,11 @@
 
-
 .main-container {
-height: 95vh;
-width: 100%;
+    min-height: 120vh;
+    max-height: 150vh; 
+    width: 100%;
 }
 
-.box {
-    display: block;
-    flex-direction: column;
-}
+
 
 .title {
     display: flex;
