--- a/src/screens/Nightly/Nightly.css
+++ b/src/screens/Nightly/Nightly.css
@@ -2,6 +2,7 @@
 
 
 
+
 .main-container {
     min-height: 120vh;
     max-height: 150vh;
@@ -41,13 +42,13 @@
     margin-bottom: 4vh;
 }
 
-.work-link button{
+.works-link button{
     background-color: #D55534;
     border-style: none;
     border-radius: 5px;
 }
 
-.work-link a {
+.works-link a {
     text-decoration: none;
     color: white;
     font-family: 'Bakbak One', cursive;
