--- a/src/screens/Docks/Docks.css
+++ b/src/screens/Docks/Docks.css
@@ -27,15 +27,16 @@
     justify-content: center;
 } 
 
-.summary {
-    margin-left: 20px;
-    margin-right: 20px;
+.Doc-summ {
+    display: flex;
+    flex-direction: column;
+    margin-left: 8vw;
+    margin-right: 8vw;
 }
 
-.stack-sum {
+.Doc-stack-sum {
     display: block;
-    margin-bottom: 0px;
-    height: 50vh;
+    margin-left: 8vw;
 } 
 
 .stacks {
