landing css media query updated

--- a/src/screens/Landing/Landing.css
+++ b/src/screens/Landing/Landing.css
@@ -35,3 +35,24 @@
     border-radius: 15px;
     font-family: 'Permanent Marker', cursive;
 }
+
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+
+
+    .Landing {
+        display: flex;
+        flex-direction: column;
+    }
+    .links {
+        display: flex;
+        margin-top: 2vh;
+    }
+    #landing-button {
+        margin-left: 1vw;
+        margin-right: 1vw;
+    }
+}
