nightly media query

--- a/src/screens/Nightly/Nightly.css
+++ b/src/screens/Nightly/Nightly.css
@@ -60,3 +60,21 @@
     margin-left: 5px;
     margin-right: 5px;
 }
+
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+    
+    .main-container {
+        height: 95vh;
+        min-height: 230vh;
+    }
+    
+    
+    .prev-pics {
+        display: flex;
+        flex-wrap: wrap;
+    }
+  }
