--- a/src/screens/Docks/Docks.css
+++ b/src/screens/Docks/Docks.css
@@ -66,18 +66,20 @@
 }
 
 @media only screen 
-  and (min-device-width: 414px) 
+  and (min-device-width: 375px) 
   and (max-device-width: 736px) 
   and (-webkit-min-device-pixel-ratio: 3)
   and (orientation: portrait) {
       .mainn-container {
+        width: 100%;
         display: flex;
-        height: 250vh;
+        height: 200vh;
         max-height: 180vh;
       }
       .prev-picss {
           display: flex;
           flex-wrap: wrap;
+          margin-right: 6vw;
           margin-bottom: 3vh;
       }
       .boxx {
